Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICSDBNET.CS


        private static class BTICSDB_64
        {
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ChClear", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ChClear(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ChConfig", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ChConfig(UInt32 configval, UInt16 bitrateflag, UInt16 bytesperblock, UInt16 framespersecond, UInt16 blocksperframe, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ChGetCount", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_ChGetCount(ref Int32 rcvcount, ref Int32 xmtcount, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ChGetInfo", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_ChGetInfo(UInt16 infotype, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ChIsCSDB", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ChIsCSDB(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ChIsRcv", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ChIsRcv(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ChIsXmt", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ChIsXmt(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ChPause", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_ChPause(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ChPauseCheck", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ChPauseCheck(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ChResume", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICSDB_ChResume(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ChStart", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ChStart(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ChStop", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ChStop(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_FilterClear", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_FilterClear(UInt32 basevaladdr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_FilterDefault", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_FilterDefault(UInt32 configval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_FilterRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_FilterRd(Int32 addrval, Int32 sival, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_FilterSet", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_FilterSet(UInt32 configval, Int32 addrval, Int32 simask, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_FilterWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_FilterWr(UInt32 msgaddr, Int32 addrval, Int32 sival, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ListDataRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ListDataRd(byte[] buf, Int32 count, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ListDataWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ListDataWr(byte[] buf, Int32 count, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ListRcvCreate", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_ListRcvCreate(UInt32 listconfigval, Int32 count, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ListStatus", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ListStatus(UInt32 listaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ListXmtCreate", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_ListXmtCreate(UInt32 listconfigval, Int32 count, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_MsgBlockRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_MsgBlockRd(ref MSGFIELDSCSDB msgfields, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_MsgBlockWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_MsgBlockWr(ref MSGFIELDSCSDB msgfields, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_MsgCreate", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICSDB_MsgCreate(UInt32 configval, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_MsgDataByteRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern byte BTICSDB_MsgDataByteRd(Int32 index, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_MsgDataByteWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_MsgDataByteWr(byte data, Int32 index, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_MsgDataRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_MsgDataRd(byte[] buf, Int32 count, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_MsgDataWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_MsgDataWr(byte[] buf, Int32 count, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_MsgIsAccessed", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_MsgIsAccessed(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_MsgValidSet", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICSDB_MsgValidSet(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ParamAmplitudeConfig", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ParamAmplitudeConfig(UInt32 configval, UInt16 dacval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ParamAmplitudeGet", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ParamAmplitudeGet(ref UInt16 dacval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedBranch", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedBranch(UInt32 condition, Int32 destindex, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedBuild", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedBuild(Int32 nummsgs, UInt32[] msgs, Int32[] freq, Int32 interblockgap, Int32 rsvdblocks, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedCall", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedCall(UInt32 condition, Int32 destindex, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedEntry", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedEntry(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedGap", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedGap(UInt16 gapval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedHalt", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedHalt(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedLog", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedLog(UInt32 condition, UInt16 tagval, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedMsg", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedMsg(UInt32 msgaddr, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedPause", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedPause(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedPulse", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedPulse(Int32 dionum, Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedRestart", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedRestart(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_SchedReturn", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_SchedReturn(Int32 channum, IntPtr handleval);
            [DllImport("BTICSDB64.DLL", EntryPoint = "BTICSDB_ChConfigEx", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICSDB_ChConfigEx(UInt32 configval, UInt16 bitrateflag, UInt16 bytesperblock, UInt16 framespersecond, UInt16 blocksperframe, UInt16 interbytegap, Int32 channum, IntPtr handleval);
